# bonsai

./: Cargo.toml  README.md  manual-installation.md  setup.py  update.sh
ChocoCubes/: install.sh  pom.xml
benchmark/: pom.xml  run.sh
benchmark/data/: benches.csv
benchmarks/GolombRuler/: pom.xml
benchmarks/LatinSquare/: pom.xml
benchmarks/NQueens/: pom.xml
doc/: book.toml  run.sh
doc/src/: PPDP19.md  README.md  SUMMARY.md  application-composition.md  benchmarks.md  complement-esop2019.md  getting-started.md  learn-spacetime.md  research.md  synchronous-programming.md
examples/NQueens/: pom.xml
libstd/: install.sh  pom.xml
runtime/: install.sh  pom.xml
runtime-sugarcubes/sugarcubes/: BStop.java  CallProcess.java  EntailmentConfig.java  Future.java  LocalVar.java  MachineStatus.java  Module.java  ModuleVar.java  PauseUp.java  Permission.java  Scoped.java  SingleTimeVar.java  Space.java  SpaceEnvironment.java  StreamVar.java  SuspendWhen.java  Tell.java  Universe.java  Variable.java
src/: ast.rs  code_gen.rs  config.rs  context.rs  errors.rs  grammar.rs  grammar2.rs  jast.rs  lib.rs  main.rs  session.rs  visitor.rs
src/back/: code_formatter.rs  context.rs  free_variables.rs  generator.rs  mod.rs
src/driver/: config.rs  file_filter.rs  mod.rs  module_file.rs  project.rs
src/front/: functionalize.rs  grammar.rs  let_lifting.rs  mod.rs
src/middle/: add_local_drop.rs  approximate_permission.rs  collect_module_in_proc.rs  constructor.rs  duplicate.rs  functionalize_module.rs  infer_permission.rs  initialization.rs  instantaneous.rs  instantaneous_analysis.rs  matching_channel.rs  matching_ref.rs  mod.rs  recursive_call.rs  ref_initialization.rs  resolve.rs  rewrite_reincarnation.rs  search_tree_wf.rs  stream_bound.rs  undeclared.rs
tests/: test_bonsai.rs
tests/test/: compile_test.rs  display.rs  engine.rs  execute_test.rs  expected_result.rs  maven.rs  mod.rs  test_emitter.rs  unit.rs
(+361 files in other folders)
