[package]
name = "bonsai"
version = "0.1.0"
authors = ["Pierre Talbot <ptalbot@hyc.io>"]

description = "Language for specifying search strategies."
repository = "https://github.com/ptal/bonsai"
keywords = ["constraint", "language", "strategy"]
license = "Apache-2.0"

[dependencies]
oak = "^0.5.1"
oak_runtime = "^0.5.0"
partial = "0.1.3"
clap = "^2"
syntex_pos = "0.58.1"
syntex_errors = "0.58.1"
syntex_syntax = "0.58.1"

